[gd_scene load_steps=2 format=3 uid="uid://svp3cexxljhx"]

[ext_resource type="Script" path="res://addons/minstance/MinstanceToolbar/MinstanceToolButton/MinstanceSettingsDialog/MinstanceMonitorWidget/MonitorWidget.gd" id="1"]

[node name="Monitor" type="Control"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="MonitorStand" type="Control" parent="."]
anchors_preset = 0

[node name="MonitorStandPart_2" type="Panel" parent="MonitorStand"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="MonitorStandPart_1" type="Panel" parent="MonitorStand"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="MonitorBorder" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="MonitorScreen" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0

[connection signal="gui_input" from="MonitorScreen" to="." method="_on_MonitorScreen_gui_input"]
